<resources>
    <string name="app_name">Patient_HMS_Application</string>
    //Headings
    <string name="heading_one">Welcome To NM Appointment Booking System</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Easy To Use</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one"></string>
    <string name="desc_two"></string>
    <string name="desc_three"></string>
    <string name="desc_fourth">a</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="medical_history">Medical history</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>

</resources>