<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:padding="40dp"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:text="Let's Creating Your Account!"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/ed_emailRes"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/email"
                android:drawablePadding="10dp"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/ed_passwordRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_light"
                android:drawableStart="@drawable/baseline_security_24"
                android:textColor="@color/black"
                android:inputType="textPassword"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/ed_fullName"
                android:layout_width="match_parent"
                android:hint="Full Name"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/gender"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/baseline_male_24"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="2dp"
                        android:text="Male"
                        android:textAllCaps="false" />

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="132dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/baseline_female_24"
                        android:fontFamily="@font/poppins_bold"
                        android:paddingLeft="2dp"
                        android:text="Female"
                        android:textAllCaps="false" />
                </RadioGroup>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <EditText
                android:id="@+id/ed_DoB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_date_range_24"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:drawablePadding="10dp"
                android:hint="Date of birth"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <EditText
                android:id="@+id/ed_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_phone_24"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/black"
                android:hint="Mobile Phone"
                android:drawablePadding="10dp" />


        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bt_round"
            android:fontFamily="@font/poppins_bold"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:text="Back to" />
            <TextView
                android:id="@+id/tv_loginRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textColor="@color/teal_700"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>